tests/paczka1/fuzzy1/67525999.err
Error in line 2: jBEF S816 92,2
Error in line 4: jBEF A330 41,3
Error in line 14: bryH S364 -1,3
Error in line 20: dv6Z564w4V A906 97,99
Error in line 11: bryH S364 17,8
Error in line 30: jBEF S816 18,8
Error in line 25: dv6Z564w4V A906 477,8
Error in line 38: bryH A906 67,3
